# LXT-R

./: .gitignore  AGENTS.md  BENCHMARK.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PLAN.md  RBP.md  README.md  generate_gif.sh
.github/workflows/: ci.yml
.mimocode/plans/: 1783110620047-glowing-garden.md  1783197814016-witty-panda.md  1783249799905-quick-cabin.md
benches/: ltx_bench.rs
crates/goldens/: README.md  fp8_quantize_extreme.safetensors  fp8_quantize_normal.safetensors  group_norm.safetensors  patchify_4d.safetensors  patchify_5d.safetensors  pixel_norm.safetensors  rms_norm_nontrivial.safetensors  rms_norm_ones.safetensors  rope_precompute.safetensors  scheduler_n0.safetensors  scheduler_n1.safetensors  scheduler_n10.safetensors  scheduler_n5.safetensors  scheduler_n50.safetensors  sinusoidal_batch.safetensors  sinusoidal_single.safetensors  timestep_mlp.safetensors
crates/ltx-app/: Cargo.toml
crates/ltx-app/src/: app.rs  export.rs  inference.rs  main.rs  state.rs
crates/ltx-app/src/panels/: mod.rs  sidebar.rs  status.rs  viewport.rs
crates/ltx-attention/: Cargo.toml
crates/ltx-attention/src/: factory.rs  lib.rs  rope.rs  sdpa.rs  simple_attn.rs  transformer_attn.rs
crates/ltx-attention/tests/: factory.rs  golden_rope.rs  rope.rs  sdpa.rs  transformer_attn.rs
crates/ltx-audio-vae/: Cargo.toml
crates/ltx-audio-vae/src/: causality.rs  configurator.rs  downsample.rs  lib.rs  ops.rs  upsample.rs  vocoder.rs
crates/ltx-components/: Cargo.toml
crates/ltx-components/src/: diffusion_step.rs  guider.rs  lib.rs  noiser.rs  scheduler.rs
crates/ltx-conditioning/: Cargo.toml
crates/ltx-conditioning/src/: item.rs  lib.rs  mask_utils.rs  types.rs
crates/ltx-conditioning/tests/: masks.rs  types.rs
crates/ltx-conv/: Cargo.toml
crates/ltx-conv/src/: causal_conv2d.rs  causal_conv3d.rs  dual_conv3d.rs  factory.rs  lib.rs
crates/ltx-conv/tests/: causal_conv2d.rs  causal_conv3d.rs  dual_conv3d.rs  factory.rs
crates/ltx-core/: Cargo.toml
crates/ltx-core/benches/: pipeline.rs
crates/ltx-core/src/: lib.rs
crates/ltx-core/tests/: benchmark.rs  inference.rs  pipeline_audio.rs  pipeline_vae.rs  pipeline_video.rs  re_exports.rs  weight_loading.rs
crates/ltx-fp8/: Cargo.toml
crates/ltx-fp8/src/: cast.rs  cublas.rs  dequantize.rs  lib.rs  quantize.rs
crates/ltx-guidance/: Cargo.toml
crates/ltx-guidance/src/: lib.rs  perturbations.rs
crates/ltx-guidance/tests/: perturbations.rs
crates/ltx-loader/: Cargo.toml
crates/ltx-loader/src/: builder.rs  kernels.rs  lib.rs  lora.rs  module_ops.rs  primitives.rs  registry.rs  safetensors_loader.rs  sd_ops.rs
crates/ltx-norm/: Cargo.toml
crates/ltx-norm/src/: factory.rs  group_norm.rs  lib.rs  pixel_norm.rs  rms_norm.rs
crates/ltx-norm/tests/: factory.rs  golden_rms_norm.rs  group_norm.rs  pixel_norm.rs  rms_norm.rs
crates/ltx-patchify/: Cargo.toml
crates/ltx-patchify/src/: audio_patchifier.rs  coords.rs  lib.rs  ops.rs  tiling.rs  video_patchifier.rs
crates/ltx-quantization/: Cargo.toml
crates/ltx-quantization/src/: fp8_mm.rs  int4_mm.rs  int8_mm.rs  lib.rs  policy.rs
crates/ltx-quantization/tests/: fp8_mm.rs  policy.rs
crates/ltx-resblock/: Cargo.toml
crates/ltx-resblock/src/: factory.rs  lib.rs  resblock_1d.rs  resblock_2d.rs  resblock_3d.rs  unet_mid.rs
crates/ltx-resblock/tests/: factory.rs  resblock_1d.rs  resblock_2d.rs  resblock_3d.rs  unet_mid.rs
crates/ltx-test-utils/: Cargo.toml
crates/ltx-test-utils/src/: assertions.rs  fixtures.rs  golden.rs  lib.rs
crates/ltx-text-encoder/: Cargo.toml
crates/ltx-text-encoder/src/: config.rs  configurator.rs  embeddings_connector.rs  embeddings_processor.rs  encoder.rs  feature_extractor.rs  gemma3_text.rs  image_processor.rs  lib.rs  prompt_enhancement.rs  siglip.rs  t5_encoder.rs  tokenizer.rs
crates/ltx-text-encoder/tests/: config.rs  connectors.rs  embeddings.rs  encoder_shapes.rs  prompt_enhancement.rs
crates/ltx-timestep/: Cargo.toml
crates/ltx-timestep/src/: adaln.rs  combined.rs  lib.rs  mlp.rs  sinusoidal.rs
crates/ltx-timestep/tests/: adaln.rs  combined.rs  mlp.rs  sinusoidal.rs
crates/ltx-transformer/: Cargo.toml
crates/ltx-transformer/src/: args.rs  block.rs  configurator.rs  feed_forward.rs  lib.rs  model.rs  text_projection.rs
crates/ltx-transformer/tests/: block.rs  feed_forward.rs  model.rs  text_projection.rs
crates/ltx-types/: Cargo.toml
crates/ltx-types/src/: constants.rs  enums.rs  lib.rs  modality.rs  protocols.rs  shapes.rs  tools.rs  utils.rs
crates/ltx-types/tests/: constants.rs  enums.rs  shapes.rs  utils.rs
crates/ltx-upsampler/: Cargo.toml
crates/ltx-upsampler/src/: blur_downsample.rs  configurator.rs  lib.rs  pixel_shuffle.rs  rational_resampler.rs
crates/ltx-upsampler/tests/: blur_downsample.rs  pixel_shuffle.rs  rational_resampler.rs  upsampler.rs
crates/ltx-video-vae/: Cargo.toml
crates/ltx-video-vae/src/: configurator.rs  decoder_blocks.rs  encoder_blocks.rs  lib.rs  sampling.rs
crates/ltx-video-vae/tests/: configurator.rs  roundtrip.rs  roundtrip_image.rs
scripts/: benchmark.py  convert_ltx_weights.py  convert_weights.py  generate_goldens.py
