[package]
name = "ltx-text-encoder"
version = "0.1.0"
edition = "2021"

[dependencies]
ltx-types = { path = "../ltx-types" }
ltx-norm = { path = "../ltx-norm" }
ltx-attention = { path = "../ltx-attention" }
tch = { workspace = true }
tokenizers = { workspace = true }
sentencepiece = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }

[lints]
workspace = true
