[package]
name = "ltx-transformer"
version = "0.1.0"
edition = "2021"

[dependencies]
ltx-types = { path = "../ltx-types" }
ltx-norm = { path = "../ltx-norm" }
ltx-attention = { path = "../ltx-attention" }
ltx-timestep = { path = "../ltx-timestep" }
tch = { workspace = true }

[lints]
workspace = true
