[package]
name = "ltx-video-vae"
version = "0.1.0"
edition = "2021"

[dependencies]
ltx-types = { path = "../ltx-types" }
ltx-norm = { path = "../ltx-norm" }
ltx-conv = { path = "../ltx-conv" }
ltx-resblock = { path = "../ltx-resblock" }
ltx-timestep = { path = "../ltx-timestep" }
tch = { workspace = true }
safetensors = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
safetensors = { workspace = true }

[lints]
workspace = true
